# raspi-oled

./: .gitignore  Cargo.toml  LICENSE  README.md  RPi-Zero.scad  circuit.cddx  default.nix  events_weekly.json  flake.nix  shell.nix
frame-output/: Cargo.toml
frame-output/src/: lib.rs
music/: Cargo.toml
music/src/: command.rs  main.rs  mpv_status.rs  ui.rs
raspi-lib/: Cargo.toml
raspi-lib/src/: context.rs  lib.rs  screensaver.rs  time_display.rs
raspi-oled/: Cargo.toml
raspi-oled/src/: context.rs  github.rs  lib.rs
raspi-oled/src/draw/: font_15x30.raw  measurements.rs  totp.rs
raspi-oled/src/schedule/: github_notifications.rs
raspi-oled/src/screensaver/: mod.rs
src/: context.rs  github.rs  lib.rs  main.rs  star.raw
src/draw/: totp.rs
src/schedule/: github_notifications.rs  mod.rs
src/screensaver/: mod.rs  plate.raw  rpi.raw  spaghetti.raw  teddy_bear.raw  time_display.rs
