[package]
name = "raspi-oled"
version = "0.1.0"
authors = ["chux0519 <chuxdesign@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
linux-embedded-hal = "0.3.0"
embedded-hal = "0.2.5"
machine-ip = "0.2.1"
#ssd1306 = "0.6.0"
libc = "0.2.98"
gpio-cdev = "0.4"
dht-hal = "0.0.1"
rusqlite = "0.25.3"
time = { version = "0.3.9", features = ["parsing"] }
time-tz = "1.0.1"
image = "0.24.1"
serde_json = "1.0.79"
serde_derive = "1.0.136"
serde = "1.0.136"
rppal = { version = "0.13.1", features = ["hal"] }
#ssd1351 = "0.4.0"
ssd1351 = { path = "../ssd1351-rust" }
display-interface-spi = "0.4.1"

[profile.release]
codegen-units = 1
debug = true
lto = true
