[package]
name = "raspi-oled"
version = "0.1.0"
authors = ["FliegendeWurst <2012gdwu@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
linux-embedded-hal = "0.3.0"
embedded-hal = "0.2.5"
libc = "0.2.98"
rusqlite = "0.32.1"
time = { version = "0.3.9", features = ["parsing"] }
time-tz = "2"
image = { version = "0.24.1", optional = true }
serde_json = "1.0.79"
serde_derive = "1.0.136"
serde = "1.0.136"
rppal = { version = "0.14.1", features = ["hal"] }
ssd1351 = { git = "https://github.com/FliegendeWurst/ssd1351-rust", rev = "3de5be50bd9a59391c669aec8357923a56d121f6" }
display-interface-spi = "0.4.1"
ureq = { version = "2.4.0", default-features = false, features = ["tls"] }
winit = { version = "0.28.7", optional = true }
softbuffer = { version = "0.3.1", optional = true }
rand_xoshiro = "0.6.0"
gpiocdev = "0.6.0"
rpassword = "7.2.0"
andotp-import = "0.1.0"
totp-rs = "5.4.0"
color_space = "0.5.4"
#gpio-am2302-rs = { git = "https://github.com/FliegendeWurst/gpio-am2302-rs" }

[features]
pc = ["winit", "softbuffer", "image"]
default = [ "pc" ]

[profile.release]
codegen-units = 1
debug = true
lto = true
