[package]
name = "music"
version = "0.1.0"
edition = "2024"

[dependencies]
display-interface-spi = "0.4.1"
rppal = { version = "0.14.1", features = ["hal"] }
ssd1351 = { git = "https://github.com/FliegendeWurst/ssd1351-rust", rev = "3de5be50bd9a59391c669aec8357923a56d121f6" }
raspi-lib = { path = "../raspi-lib" }
