[package]
name = "raspi-oled"
version = "0.1.0"
authors = ["FliegendeWurst <2012gdwu@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
linux-embedded-hal = "0.4.0"
embedded-hal = "1.0.0"
libc = "0.2.98"
rusqlite = "0.32.1"
time = { version = "0.3.9", features = ["parsing", "formatting"] }
time-tz = "2"
image = { version = "0.24.1", optional = true }
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
rppal = { version = "0.22.1", features = ["embedded-hal", "embedded-hal-nb"] }
ssd1351 = { git = "https://codeberg.org/FliegendeWurst/ssd1351-rpi", rev = "99e3844c6696b582c45ecd87ce8dfe8efe977da3" }
display-interface-spi = "0.5.0"
ureq = { version = "=3.0.0-rc2", default-features = false, features = ["rustls"] }
winit = { version = "0.28.7", optional = true }
softbuffer = { version = "0.3.1", optional = true }
rand_xoshiro = "0.6.0"
gpiocdev = "0.7.2"
rpassword = "7.2.0"
andotp-import = "0.1.0"
totp-rs = "5.4.0"
color_space = "0.5.4"
#gpio-am2302-rs = { git = "https://github.com/FliegendeWurst/gpio-am2302-rs" }
raspi-lib = { path = "../raspi-lib" }

[features]
pc = ["winit", "softbuffer", "image"]
default = ["pc"]
